Crash : attempting to reset a a custom property that has a string value crashes Blender #69332

Closed
opened 2019-08-30 15:56:12 +02:00 by Fin O'Riordan · 18 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: daba3e871f
Worked: (Possibly never it crashes 2.79 too)

Short description of error
If right click on a custom property that has a string value you will get a "Reset to Default Value" option.... selecting it crashes Blender

Exact steps for others to reproduce the error
I've uploaded a simple file, the cube has a custom property... reset it to default value.

reset for crash.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: `daba3e871f` Worked: (Possibly never it crashes 2.79 too) **Short description of error** If right click on a custom property that has a string value you will get a "Reset to Default Value" option.... selecting it crashes Blender **Exact steps for others to reproduce the error** I've uploaded a simple file, the cube has a custom property... reset it to default value. [reset for crash.blend](https://archive.blender.org/developer/F7710836/reset_for_crash.blend)
Author

Added subscriber: @FinbarrORiordan

Added subscriber: @FinbarrORiordan

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Can confirm bug:
image.png
Thanks!
Have no idea, is there is why to check logs/error?

Can **confirm** bug: ![image.png](https://archive.blender.org/developer/F7710870/image.png) Thanks! Have no idea, is there is **why to check** logs/error?
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member
# Blender 2.81 (sub 4), Unknown revision

# backtrace
b281(BLI_system_backtrace+0x35) [0x5651dd105118]
b281(+0x2bdcd5f) [0x5651dcd5ed5f]
b281(+0x2bdcf3e) [0x5651dcd5ef3e]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f3793c5ff20]
/lib/x86_64-linux-gnu/libc.so.6(+0xb1646) [0x7f3793cd2646]
b281(RNA_property_string_default_length+0x8b) [0x5651dd212d5f]
b281(RNA_property_string_get_default_alloc+0x8a) [0x5651dd212c7c]
b281(RNA_property_reset+0x385) [0x5651dd21ec11]
b281(+0x39fc82c) [0x5651ddb7e82c]
b281(+0x329b014) [0x5651dd41d014]
b281(+0x329b81c) [0x5651dd41d81c]
b281(WM_operator_name_call_ptr+0xb0) [0x5651dd41d8d9]
b281(+0x39ca6b6) [0x5651ddb4c6b6]
b281(+0x39e3cbe) [0x5651ddb65cbe]
b281(+0x3298b7b) [0x5651dd41ab7b]
b281(+0x329df91) [0x5651dd41ff91]
b281(+0x329ed66) [0x5651dd420d66]
b281(wm_event_do_handlers+0x7ec) [0x5651dd421ffa]
b281(WM_main+0x30) [0x5651dd414e77]
b281(+0x2bd8624) [0x5651dcd5a624]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f3793c42b97]
b281(_start+0x2a) [0x5651dcd5a0aa]
  • does not happen when the property was just created. Could be related to saving/loading.

I am see it happening in the file, but I am not able to reproduce it from scratch. Do you know the steps that were taken in order you got the file in this state that crashes?

``` # Blender 2.81 (sub 4), Unknown revision # backtrace b281(BLI_system_backtrace+0x35) [0x5651dd105118] b281(+0x2bdcd5f) [0x5651dcd5ed5f] b281(+0x2bdcf3e) [0x5651dcd5ef3e] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f3793c5ff20] /lib/x86_64-linux-gnu/libc.so.6(+0xb1646) [0x7f3793cd2646] b281(RNA_property_string_default_length+0x8b) [0x5651dd212d5f] b281(RNA_property_string_get_default_alloc+0x8a) [0x5651dd212c7c] b281(RNA_property_reset+0x385) [0x5651dd21ec11] b281(+0x39fc82c) [0x5651ddb7e82c] b281(+0x329b014) [0x5651dd41d014] b281(+0x329b81c) [0x5651dd41d81c] b281(WM_operator_name_call_ptr+0xb0) [0x5651dd41d8d9] b281(+0x39ca6b6) [0x5651ddb4c6b6] b281(+0x39e3cbe) [0x5651ddb65cbe] b281(+0x3298b7b) [0x5651dd41ab7b] b281(+0x329df91) [0x5651dd41ff91] b281(+0x329ed66) [0x5651dd420d66] b281(wm_event_do_handlers+0x7ec) [0x5651dd421ffa] b281(WM_main+0x30) [0x5651dd414e77] b281(+0x2bd8624) [0x5651dcd5a624] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f3793c42b97] b281(_start+0x2a) [0x5651dcd5a0aa] ``` * does not happen when the property was just created. Could be related to saving/loading. I am see it happening in the file, but I am not able to reproduce it from scratch. Do you know the steps that were taken in order you got the file in this state that crashes?
Author

I literally just create a custom property then try reset it to default.... I'll try get another user to confirm...

I literally just create a custom property then try reset it to default.... I'll try get another user to confirm...
Author

This is in a fresh blend...

try me.gif

This is in a fresh blend... ![try me.gif](https://archive.blender.org/developer/F7713990/try_me.gif)
Member

Added subscribers: @angavrilov, @lichtwerk

Added subscribers: @angavrilov, @lichtwerk
Member

Can confirm this, too.
Not sure why I am not getting it all the time (sometimes I have to try twice), but on second try, it always fails.
With a debugger attached, it seems to always fail.

Note this was once reported before #54899 (Custom property -> revert to default value crashes blender), I wasnt able to reproduce for a while later, so closed it, but seems to be back (or never fixed...)

@angavrilov : you did 61c941f040, mind checking if P669 is safe enough?

Can confirm this, too. Not sure why I am not getting it all the time (sometimes I have to try twice), but on second try, it always fails. With a debugger attached, it seems to always fail. Note this was once reported before #54899 (Custom property -> revert to default value crashes blender), I wasnt able to reproduce for a while later, so closed it, but seems to be back (or never fixed...) @angavrilov : you did 61c941f040, mind checking if [P669](https://archive.blender.org/developer/P669.txt) is safe enough?
Author

I can even reproduce this in 2.69... it's a fairly consistent bug ;)

try me.gif

I can even reproduce this in 2.69... it's a fairly consistent bug ;) ![try me.gif](https://archive.blender.org/developer/F7714046/try_me.gif)
Author

....even the removal of the ability to to run a "Reset to Default Value" for strings would considered a fix.

....even the removal of the ability to to run a "Reset to Default Value" for strings would considered a fix.

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Yep, can confirm this is happening in the supplied blend.
I can also reproduce it in new blends. I've tried adjusting various settings(like setting or clearing a default value) of the prop before attempting to reset to defaults. Sometimes it would not crash, but I could not find a consistent method to do this.

Yep, can confirm this is happening in the supplied blend. I can also reproduce it in new blends. I've tried adjusting various settings(like setting or clearing a default value) of the prop before attempting to reset to defaults. Sometimes it would not crash, but I could not find a consistent method to do this.

Added subscriber: @Pinnhead

Added subscriber: @Pinnhead

Crash with:

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF621666643
Module : H:\Blender\Blender2.81\blender.exe

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-13 16:25, hash: 9bd0d8b550

Crash with: Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF621666643 Module : H:\Blender\Blender2.81\blender.exe **System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-13 16:25, hash: `9bd0d8b550`

This issue was referenced by 60e817693c

This issue was referenced by 60e817693ce707842dc8521a6ee94ce1778e6372

This issue was referenced by cfb7f508ce

This issue was referenced by cfb7f508ce76b8dea83da555e67813c161a6869d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-11-22 12:21:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69332
No description provided.